--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
-body*/{
+body{
 	font-family: 'Roboto', sans-serif;
+}
+.row{
+	margin: 0;
 }
 .index-container{
 	width: 80%;
@@ -170,9 +173,71 @@ color: #a5cd39;
 .bigger-plant-section h3{
 	font-weight: 800;
 }
+.bigger-plant-section .col-xl-5{
+	margin: auto;
+}
 .collection-btn{
 	background: #a5cd39;
 	padding: 20px 3rem;
 	font-weight: bold;
+	/*color: #fff;*/
+}
+.indoor-plant-txt-div{
+	background: #006838;
+	padding: 7rem 4rem 7rem 12rem;
 	color: #fff;
+}
+.indoor-slide{
+	position: static;
+	margin-left: 10rem;
+	margin-top: 5rem;
+	margin-right: -10REM;
+}
+.indoor-slide img{
+	width: 100%;
+}
+.blog-section{
+	margin: 6rem 0;
+}
+.blog-section h3{
+	font-weight: 800;
+	text-align: center;
+}
+.blog-section p{
+	font-size: 16px;
+}
+.blog-card small{
+color: #a5cd39;
+}
+.blog-card{
+		box-shadow: 0px 0px 30px rgba(0, 0, 0,0.2);
+text-align: left;
+}
+.read-more-btn{
+	background: #006838;
+	color: #fff;
+}
+.footer{
+	background-image: linear-gradient(rgba(0, 0, 0, 0.727),rgba(0, 0, 0, 0.7)) ,url("../images/footer-img.jpg");
+	padding: 5rem 0 0 0;
+	color: #fff;
+}
+.footer i{
+	font-size: 25px ;
+	color: #fff;
+	margin:0 10px;
+}
+.footer a{
+	color: #fff;
+	text-decoration: none;
+}
+.footer h4{
+	font-weight: bold;
+}
+.footer-bottom{
+	background: rgba(0, 0, 0, 0.5);
+	padding: 30px 0 10px 0;
+	text-align: center;
+	color: #fff;
+margin-top: 6rem;
 }
